fix nav bar spacing and add font

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  padding-top: 20vh; /* match this with nav bar*/
 }
 
 .counter {
