--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -11,10 +11,13 @@
 }
 
 .nav-brand h1 {
+  font-family: "Goldman", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   margin: 0;
+  margin-bottom: 20px;
   font-size: 2.5rem;
   letter-spacing: 2px;
-  text-transform: lowercase; /* Optional: gives that techy .net feel */
 }
 
 .nav-links {
